# Aseprite-Mappie

./: .gitignore  Makefile  README.md  pyproject.toml  terrain.bitmask.json
assets/lua/: generate_solid_tileset.lua  init_tileset.lua  paint_ascii_map.lua  paint_from_png.lua  paint_preview_layered.lua
docs/: HILL_MASK_LEGEND.md  SHORELINE_BEACH_TILES.md
examples/: 8neighborhood.aseprite  diagonal.aseprite  dirt.aseprite  grass.aseprite  grass.config.json  grass.csv  grass.json  hill_config_gotchicraft.json  hills.aseprite  lake_config_gotchicraft.json  lakesrivers.aseprite  river_config_gotchicraft.json  shoreline_config_gotchicraft.json  shorelines.aseprite  shorelines.json  terrain.aseprite  terrain.bitmask.json  tree_config_gotchicraft.json  trees.aseprite  water.aseprite
extensions/export-tiles-metadata/: README.md  export_tiles_metadata.lua  package.json
maps/: example_precomputed.hill.json  generated_map.csv  generated_map.hill.debug.json  generated_map.hill.json  generated_map.legend.json  generated_map.preview.aseprite  generated_map.tiled.json  generated_map.txt  menu_preview.legend.json  menu_preview.txt  sample_room.legend.json  sample_room.txt  test_lake.txt  test_trees.legend.json  test_trees.txt  test_vertical.txt
scripts/: ascii_map_gen.py  ascii_to_tilemap.py  aseprite_tileset.py  export_tilemap.py
src/tilemap_generator/: __init__.py  app.py  aseprite_cli.py  cli.py  export_cli.py  export_tilemap.py  hill_topology.py  legend.py  map_gen_cli.py  paint_map_png.py  tree_logic.py
tests/: test_hill_topology.py  test_paint_map_png.py
